# story-maker-ai

./: .env.example  .env.prod.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
.claude/commands/: push.md
.github/workflows/: ci.yml
apps/accounts/: forms.py  selectors.py  services.py  urls.py  views.py
apps/accounts/api/: __init__.py
apps/accounts/api/v1/: __init__.py  serializers.py  urls.py  views.py
apps/api/: serializers.py  urls.py  views.py
apps/stories/: admin.py  models.py  selectors.py  tasks.py  urls.py  views.py
apps/stories/api/: __init__.py
apps/stories/api/v1/: __init__.py  serializers.py  urls.py  views.py
apps/stories/migrations/: 0001_initial.py
apps/stories/services/: __init__.py  ollama_client.py  prompt_builder.py  story_service.py
apps/stories/tests/: __init__.py  conftest.py  factories.py  test_api.py  test_integration.py  test_models.py  test_services.py
common/: celery_utils.py  exceptions.py  mixins.py  models.py  pagination.py  permissions.py
config/: __init__.py  asgi.py  celery.py  urls.py  wsgi.py
config/settings/: __init__.py  base.py  development.py  production.py
docker/django/: Dockerfile.prod
docker/nginx/: nginx.conf
docs/: stage-1-skeleton.md
requirements/: base.txt  dev.txt
scripts/: entrypoint.sh  init_ollama.sh
static/css/: styles.css
static/js/: polling.js
templates/: base.html
templates/accounts/: login.html  register.html
templates/stories/: home.html  story_detail.html
tests/: conftest.py
tests/e2e/: __init__.py  conftest.py  test_auth.py  test_generation.py  test_story.py
tests/e2e/pages/: __init__.py  base_page.py  home_page.py  login_page.py  story_detail_page.py
